<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.exercicio01.MainActivity">

    <TextView
        android:id="@+id/textViewValue1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/editTextValue1"
        android:text="@string/valor_1" />

    <EditText
        android:id="@+id/editTextValue1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:text="@string/input1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewValue2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/editTextValue2"
        android:text="@string/valor_2" />

    <EditText
        android:id="@+id/editTextValue2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        android:text="@string/input2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaultResultado" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSum"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sumSymbol" />

        <Button
            android:id="@+id/buttonMinus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minusSymbol"
            tools:ignore="TextContrastCheck" />

        <Button

            style="@style/Widget.AppCompat.Button"
            android:id="@+id/buttonMultiplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiplierSymbol"
            />

        <Button
            android:id="@+id/buttonDivider"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dividerSymbol"
            />
    </LinearLayout>
</LinearLayout>